--- a/src/Client/LoginView/LoginView.fxml
+++ b/src/Client/LoginView/LoginView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.LoginView.LogInViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.LoginView.LogInViewController">
     <children>
         <Button layoutX="276.0" layoutY="264.0" mnemonicParsing="false" text="LogIn" />
         <TextField layoutX="220.0" layoutY="229.0" promptText="Password" />
