--- a/src/Client/Views/LogInView/LoginView.fxml
+++ b/src/Client/Views/LogInView/LoginView.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.LogInView.LoginViewController">
     <children>
-        <Button layoutX="276.0" layoutY="264.0" mnemonicParsing="false" text="LogIn" />
-        <TextField layoutX="220.0" layoutY="229.0" promptText="Password" />
+        <Button fx:id="logInButton" layoutX="276.0" layoutY="264.0" mnemonicParsing="false" onAction="#logIn" text="LogIn" />
+        <TextField fx:id="textField" layoutX="220.0" layoutY="229.0" promptText="Password" />
         <Label layoutX="237.0" layoutY="81.0" text="Rent4U">
             <font>
                 <Font name="System Bold" size="39.0" />
