--- a/src/Client/Views/AddVehicleView/AddVehicleView.fxml
+++ b/src/Client/Views/AddVehicleView/AddVehicleView.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.MenuButton?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddVehicleView.AddVehicleViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddVehicleView.AddVehicleViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Add new vehicle" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Add new vehicle" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -44,7 +44,7 @@
          </items>
       </MenuButton>
       <Label layoutX="224.0" layoutY="235.0" text="License plate:" />
-      <Label layoutX="224.0" layoutY="270.0" text="Engine power(kW):)" />
+      <Label layoutX="224.0" layoutY="270.0" text="Engine power(kW):" />
       <TextField fx:id="licensePlateField" layoutX="348.0" layoutY="230.0" prefHeight="27.0" prefWidth="109.0" promptText="AA 00 000" />
       <TextField fx:id="enginePowerField" layoutX="348.0" layoutY="265.0" prefHeight="27.0" prefWidth="109.0" promptText="0" />
    </children>
