--- a/src/Client/Views/AddVehicleView/AddVehicleView.fxml
+++ b/src/Client/Views/AddVehicleView/AddVehicleView.fxml
@@ -30,7 +30,8 @@
       <Label layoutX="275.0" layoutY="109.0" text="Select type of fuel:" AnchorPane.leftAnchor="275.0" AnchorPane.topAnchor="110.0" />
       <RadioButton fx:id="petrolTypeButton" layoutX="286.0" layoutY="132.0" mnemonicParsing="false" text="petrol" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="130.0" />
       <RadioButton fx:id="dieselTypeButton" layoutX="286.0" layoutY="159.0" mnemonicParsing="false" text="diesel" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="160.0" />
-      <RadioButton fx:id="hybridTypeButton" layoutX="285.0" layoutY="183.0" mnemonicParsing="false" text="hybrid" AnchorPane.leftAnchor="290.0" AnchorPane.topAnchor="190.0" />
+      <RadioButton fx:id="hybridTypeButton" layoutX="390.0" layoutY="130.0" mnemonicParsing="false" text="hybrid" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="130.0" />
+      <RadioButton fx:id="electricTypeButton" layoutX="390.0" layoutY="160.0" mnemonicParsing="false" text="electric" AnchorPane.leftAnchor="390.0" AnchorPane.topAnchor="160.0" />
       <Label layoutX="21.0" layoutY="236.0" text="Number of seats:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="235.0" />
       <TextField fx:id="nbOfSeatsField" layoutX="135.0" layoutY="231.0" prefHeight="27.0" prefWidth="55.0" promptText="0" AnchorPane.leftAnchor="135.0" AnchorPane.topAnchor="230.0" />
       <Label layoutX="21.0" layoutY="266.0" text="Price per day (dkk):" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="270.0" />
