--- a/src/Client/Views/AddVehicleView/AddVehicleView.fxml
+++ b/src/Client/Views/AddVehicleView/AddVehicleView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
@@ -49,5 +50,6 @@
       <TextField fx:id="licensePlateField" layoutX="348.0" layoutY="230.0" prefHeight="27.0" prefWidth="109.0" promptText="AA 00 000" />
       <TextField fx:id="enginePowerField" layoutX="348.0" layoutY="265.0" prefHeight="27.0" prefWidth="109.0" promptText="0" />
       <Button layoutX="416.0" layoutY="343.0" mnemonicParsing="false" onAction="#onAddButton" text="Add new vehicle" />
+      <ComboBox fx:id="types" layoutX="67.0" layoutY="343.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
