--- a/src/Client/Views/AddVehicleView/AddVehicleView.fxml
+++ b/src/Client/Views/AddVehicleView/AddVehicleView.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -37,19 +35,11 @@
       <TextField fx:id="nbOfSeatsField" layoutX="135.0" layoutY="231.0" prefHeight="27.0" prefWidth="55.0" promptText="0" AnchorPane.leftAnchor="135.0" AnchorPane.topAnchor="230.0" />
       <Label layoutX="21.0" layoutY="266.0" text="Price per day (dkk):" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="270.0" />
       <TextField fx:id="priceField" layoutX="135.0" layoutY="261.0" prefHeight="27.0" prefWidth="55.0" promptText="0" AnchorPane.leftAnchor="135.0" AnchorPane.topAnchor="265.0" />
-      <MenuButton fx:id="typeMenuButton" layoutX="65.0" layoutY="65.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="180.0" text="Select type" AnchorPane.leftAnchor="65.0" AnchorPane.topAnchor="65.0">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Car" />
-            <MenuItem mnemonicParsing="false" text="Van" />
-            <MenuItem mnemonicParsing="false" text="Minibus" />
-            <MenuItem mnemonicParsing="false" text="Motorcycle" />
-         </items>
-      </MenuButton>
       <Label layoutX="224.0" layoutY="235.0" text="License plate:" />
       <Label layoutX="224.0" layoutY="270.0" text="Engine power(kW):)" />
       <TextField fx:id="licensePlateField" layoutX="348.0" layoutY="230.0" prefHeight="27.0" prefWidth="109.0" promptText="AA 00 000" />
       <TextField fx:id="enginePowerField" layoutX="348.0" layoutY="265.0" prefHeight="27.0" prefWidth="109.0" promptText="0" />
       <Button layoutX="416.0" layoutY="343.0" mnemonicParsing="false" onAction="#onAddButton" text="Add new vehicle" />
-      <ComboBox fx:id="types" layoutX="67.0" layoutY="343.0" prefWidth="150.0" />
+      <ComboBox fx:id="types" layoutX="67.0" layoutY="343.0" prefHeight="27.0" prefWidth="180.0" promptText="Select type" AnchorPane.leftAnchor="65.0" AnchorPane.topAnchor="65.0" />
    </children>
 </AnchorPane>
