--- a/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
@@ -4,19 +4,19 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.ListOfVehiclesView.ListOfVehiclesViewController">
    <children>
-      <Button layoutX="352.0" layoutY="346.0" mnemonicParsing="false" text="Add new vehicle" onAction="#onAddVehicleButton" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="140.0" />
+      <Button layoutX="352.0" layoutY="346.0" mnemonicParsing="false" onAction="#onAddVehicleButton" text="Add new vehicle" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="140.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <TableView layoutX="-5.0" layoutY="77.0" prefHeight="270.0" prefWidth="586.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="70.0">
+      <TableView fx:id="table" layoutX="-5.0" layoutY="77.0" prefHeight="270.0" prefWidth="586.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="70.0">
           <columns>
               <TableColumn prefWidth="80" text="Type">
                   <cellValueFactory><PropertyValueFactory property="type" />
@@ -61,6 +61,6 @@
           </columns>
       </TableView>
       <Label layoutX="25.0" layoutY="52.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="50.0" />
-      <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" onAction="#onMenuButton" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
+      <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
    </children>
 </AnchorPane>
