--- a/src/Client/Views/AddBookingView/AddBookingView.fxml
+++ b/src/Client/Views/AddBookingView/AddBookingView.fxml
@@ -4,11 +4,12 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingView.AddBookingController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingView.AddBookingViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Create a booking" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -16,11 +17,11 @@
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <Label layoutX="25.0" layoutY="68.0" text="Choose an id of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="70.0" />
+      <Label layoutX="25.0" layoutY="61.0" text="Choose an id of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="61.0" />
       <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
-      <ComboBox layoutX="26.0" layoutY="95.0" prefWidth="150.0" promptText="Customer's ID" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="95.0" />
-      <Label layoutX="210.0" layoutY="70.0" text="Select a vehicle:" AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="70.0" />
-      <ComboBox layoutX="210.0" layoutY="95.0" prefWidth="150.0" promptText="Desire vehicle" AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="95.0" />
+      <ComboBox layoutX="25.0" layoutY="84.0" prefWidth="150.0" promptText="Customer's ID" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="84.0" />
+      <Label layoutX="299.0" layoutY="52.0" text="Select a vehicle type:" AnchorPane.leftAnchor="299.0" AnchorPane.topAnchor="52.0" />
+      <ComboBox layoutX="427.0" layoutY="47.0" prefHeight="27.0" prefWidth="121.0" promptText="Desire type" AnchorPane.leftAnchor="427.0" AnchorPane.topAnchor="47.0" />
       <Label layoutX="26.0" layoutY="134.0" text="Select a start time:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="135.0" />
       <Label layoutX="27.0" layoutY="230.0" text="Select an end time:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="230.0" />
       <Label layoutX="46.0" layoutY="156.0" text="Date:" AnchorPane.leftAnchor="45.0" AnchorPane.topAnchor="160.0" />
@@ -33,5 +34,6 @@
       <TextField alignment="CENTER" layoutX="124.0" layoutY="295.0" prefHeight="27.0" prefWidth="40.0" promptText="MM" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="280.0" />
       <DatePicker editable="false" layoutX="266.0" layoutY="172.0" showWeekNumbers="true" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="155.0" />
       <DatePicker layoutX="254.0" layoutY="177.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="250.0" />
+      <ListView fx:id="listView" fixedCellSize="2.0" layoutX="297.0" layoutY="82.0" prefHeight="250.0" prefWidth="265.0" AnchorPane.bottomAnchor="65.0" AnchorPane.rightAnchor="40.0" />
    </children>
 </AnchorPane>
