--- a/src/Client/Views/SetStatusView/SetStatusView.fxml
+++ b/src/Client/Views/SetStatusView/SetStatusView.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.SetStatusView.SetStatusViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.SetStatusView.SetStatusViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Change the status" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -22,8 +23,20 @@
       <Label layoutX="22.0" layoutY="132.0" text="Current status:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="130.0" />
       <Label layoutX="121.0" layoutY="132.0" prefHeight="17.0" prefWidth="167.0" text="Out of service" AnchorPane.leftAnchor="125.0" AnchorPane.topAnchor="130.0" />
       <Label layoutX="22.0" layoutY="175.0" text="Enter the new status:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="175.0" />
-      <TextField layoutX="22.0" layoutY="200.0" prefHeight="27.0" prefWidth="184.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="200.0" />
+      <TextField fx:id="statusTextField" layoutX="22.0" layoutY="200.0" prefHeight="27.0" prefWidth="184.0" promptText="New Status" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="200.0" />
       <Line endX="449.0" layoutX="126.0" layoutY="162.0" startX="-100.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="160.0" />
-      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Change Status" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <Button onAction="#setSetStatusButton" layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Change Status" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <DatePicker fx:id="startDatePicker" layoutX="90.0" layoutY="255.0" promptText="Enter date" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="255.0" />
+      <Label layoutX="50.0" layoutY="260.0" text="Date:" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="260.0" />
+      <Label layoutX="50.0" layoutY="294.0" text="Time:" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="295.0" />
+      <TextField fx:id="startHour" alignment="CENTER" layoutX="86.0" layoutY="289.0" prefHeight="27.0" prefWidth="40.0" promptText="HH" AnchorPane.leftAnchor="90.0" AnchorPane.topAnchor="290.0" />
+      <TextField fx:id="startMinute" alignment="CENTER" layoutX="135.0" layoutY="289.0" prefHeight="27.0" prefWidth="40.0" promptText="MM" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="290.0" />
+      <Label layoutX="25.0" layoutY="237.0" text="Start date and time:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="235.0" />
+      <Label layoutX="319.0" layoutY="260.0" text="Date:" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="260.0" />
+      <DatePicker fx:id="endDatePicker" layoutX="352.0" layoutY="255.0" promptText="Enter date" AnchorPane.leftAnchor="385.0" AnchorPane.topAnchor="255.0" />
+      <Label layoutX="319.0" layoutY="237.0" text="End date and time:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="235.0" />
+      <Label layoutX="333.0" layoutY="294.0" text="Time:" AnchorPane.leftAnchor="350.0" AnchorPane.topAnchor="295.0" />
+      <TextField fx:id="endHour" alignment="CENTER" layoutX="381.0" layoutY="281.0" prefHeight="27.0" prefWidth="40.0" promptText="HH" AnchorPane.leftAnchor="385.0" AnchorPane.topAnchor="290.0" />
+      <TextField fx:id="endMinute" alignment="CENTER" layoutX="440.0" layoutY="289.0" prefHeight="27.0" prefWidth="40.0" promptText="MM" AnchorPane.leftAnchor="435.0" AnchorPane.topAnchor="290.0" />
    </children>
 </AnchorPane>
