--- a/src/Client/Views/EditBookingInfoView/EditBookingInfoView.fxml
+++ b/src/Client/Views/EditBookingInfoView/EditBookingInfoView.fxml
@@ -11,14 +11,14 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.EditBookingInfoView.EditBookingInfoViewController">
    <children>
-      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
+      <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" onAction="#onExitButton" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Update booking information" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
       </Label>
       <Label layoutX="25.0" layoutY="61.0" text="Choose an id of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="61.0" />
-      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Update Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" onAction="#onUpdateBookingButton" text="Update Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
       <ComboBox layoutX="25.0" layoutY="84.0" prefWidth="150.0" promptText="Customer's ID" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="84.0" />
       <Label layoutX="299.0" layoutY="52.0" text="Select a vehicle type:" AnchorPane.leftAnchor="299.0" AnchorPane.topAnchor="52.0" />
       <ComboBox layoutX="427.0" layoutY="47.0" prefHeight="27.0" prefWidth="121.0" promptText="Desire type" AnchorPane.leftAnchor="427.0" AnchorPane.topAnchor="47.0" />
