--- a/src/Client/Views/AddBookingView/VehicleViewCell/VehicleViewCell.fxml
+++ b/src/Client/Views/AddBookingView/VehicleViewCell/VehicleViewCell.fxml
@@ -3,13 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="anchorPane" maxHeight="120" maxWidth="265" minHeight="120" minWidth="265" prefHeight="120.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="makeLabel" layoutX="12.0" layoutY="10.0" prefHeight="17.0" prefWidth="70.0" text="Audi" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
          <font>
@@ -39,10 +36,4 @@
       <Label layoutX="8.0" layoutY="91.0" prefHeight="17.0" prefWidth="80.0" text="Price per day:" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
       <Label fx:id="priceLabel" layoutX="88.0" layoutY="94.0" prefHeight="17.0" prefWidth="41.0" text="100" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="90.0" />
    </children>
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
-</GridPane>
+</AnchorPane>
