--- a/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
+++ b/src/Client/Views/ListOfBookingsView/BookingViewCell/BookingViewCell.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.AddBookingView.AddBookingViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="73.0" prefWidth="545.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="221.0" layoutY="2.0" prefHeight="73.0" prefWidth="93.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="213.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -15,13 +15,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="1.0" layoutY="28.0" prefHeight="17.0" prefWidth="93.0" text="26/05/2021" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
-            <Label fx:id="startTimeLabel" layoutX="50.0" layoutY="49.0" prefHeight="17.0" prefWidth="43.0" text="8:30" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="47.5" AnchorPane.rightAnchor="0.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="3.0" layoutY="47.0" prefHeight="13.0" prefWidth="46.0" text="at" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="47.5">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
+            <Label fx:id="startDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="26/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutY="4.0" prefHeight="73.0" prefWidth="71.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -36,7 +30,7 @@
       </AnchorPane>
       <AnchorPane layoutX="62.0" layoutY="1.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer ID" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+            <Label alignment="CENTER" layoutX="8.0" layoutY="7.0" prefHeight="13.0" prefWidth="71.0" text="Customer CPR" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
                <font>
                   <Font size="10.0" />
                </font>
@@ -61,13 +55,7 @@
                   <Font size="10.0" />
                </font>
             </Label>
-            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutX="1.0" layoutY="28.0" prefHeight="17.0" prefWidth="93.0" text="30/05/2021" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0" />
-            <Label fx:id="endTimeLabel" layoutX="50.0" layoutY="49.0" prefHeight="17.0" prefWidth="43.0" text="16:15" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="47.5" AnchorPane.rightAnchor="0.0" />
-            <Label alignment="CENTER_RIGHT" layoutX="3.0" layoutY="47.0" prefHeight="13.0" prefWidth="46.0" text="at" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="47.5">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Label>
+            <Label fx:id="endDateLabel" alignment="CENTER" contentDisplay="TOP" layoutY="28.0" prefHeight="38.0" prefWidth="93.0" text="30/05/2021" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="416.0" layoutY="-3.0" prefHeight="73.0" prefWidth="71.0" style="-fx-background-color: #E5E5E5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="403.0" AnchorPane.topAnchor="0.0">
