--- a/src/Client/Views/CreateCustomerAccount/CreateCustomerAccount.fxml
+++ b/src/Client/Views/CreateCustomerAccount/CreateCustomerAccount.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="something">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.Views.CreateCustomerAccount.CreateCustomerAccountViewController">
    <children>
       <Button layoutX="462.0" layoutY="346.0" mnemonicParsing="false" text="Back to MENU" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0" />
       <Label layoutX="25.0" layoutY="31.0" text="Create a customer account" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="30.0">
@@ -18,27 +18,27 @@
       </Label>
       <Label layoutX="25.0" layoutY="61.0" text="Enter a full name of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="60.0" />
       <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" text="Create an account" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
-      <TextField layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
-      <TextField layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
+      <TextField fx:id="firstNameField" layoutX="25.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Fisrt name" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="85.0" />
+      <TextField fx:id="lastNameField" layoutX="150.0" layoutY="85.0" prefHeight="27.0" prefWidth="120.0" promptText="Last name" AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="85.0" />
       <Label layoutX="25.0" layoutY="120.0" text="Date of birth:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="120.0" />
-      <DatePicker layoutX="27.0" layoutY="143.0" prefWidth="180.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
+      <DatePicker fx:id="dateOfBirthPicker" layoutX="27.0" layoutY="143.0" prefWidth="180.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="145.0" />
       <Label layoutX="27.0" layoutY="183.0" text="Enter an E-Mail:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="180.0" />
-      <TextField layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
+      <TextField fx:id="eMailField" layoutX="25.0" layoutY="200.0" prefHeight="27.0" prefWidth="245.0" promptText="rent4u@rent4u.dk" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="321.0" layoutY="61.0" text="Choose a password:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="60.0" />
-      <TextField layoutX="321.0" layoutY="85.0" prefHeight="27.0" prefWidth="188.0" promptText="Enter password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="85.0" />
-      <TextField layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
+      <TextField fx:id="passwordField" layoutX="321.0" layoutY="85.0" prefHeight="27.0" prefWidth="188.0" promptText="Enter password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="85.0" />
+      <TextField fx:id="rePasswordField" layoutX="321.0" layoutY="124.0" prefHeight="27.0" prefWidth="188.0" promptText="Confirm password" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="120.0" />
       <Label layoutX="321.0" layoutY="183.0" text="Phone number:" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="180.0" />
       <Text layoutX="321.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Passwords are not the same" wrappingWidth="188.0" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="155.33203125">
          <font>
             <Font size="10.0" />
          </font>
       </Text>
-      <TextField layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
+      <TextField fx:id="phoneField" layoutX="321.0" layoutY="200.0" prefHeight="27.0" prefWidth="188.0" promptText=" +45 00 00 00 00" AnchorPane.leftAnchor="320.0" AnchorPane.topAnchor="205.0" />
       <Label layoutX="27.0" layoutY="239.0" text="Driving license number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="240.0" />
-      <TextField layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
+      <TextField fx:id="drivingLicenseField" layoutX="25.0" layoutY="256.0" prefHeight="27.0" prefWidth="245.0" promptText="XXXXX" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="265.0" />
       <Label layoutX="27.0" layoutY="295.0" text="Enter CPR number:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="300.0" />
-      <TextField alignment="CENTER_RIGHT" layoutX="25.0" layoutY="312.0" prefHeight="27.0" prefWidth="128.0" promptText="000000" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="325.0" />
-      <TextField layoutX="168.0" layoutY="312.0" prefHeight="27.0" prefWidth="97.0" promptText="0000" AnchorPane.leftAnchor="171.0" AnchorPane.topAnchor="325.0" />
+      <TextField fx:id="cprFirstField" alignment="CENTER_RIGHT" layoutX="25.0" layoutY="312.0" prefHeight="27.0" prefWidth="128.0" promptText="000000" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="325.0" />
+      <TextField fx:id="cprSecondField" layoutX="168.0" layoutY="312.0" prefHeight="27.0" prefWidth="97.0" promptText="0000" AnchorPane.leftAnchor="171.0" AnchorPane.topAnchor="325.0" />
       <Label alignment="CENTER" layoutX="153.0" layoutY="317.0" prefHeight="17.0" prefWidth="16.0" text="/" AnchorPane.leftAnchor="155.0" AnchorPane.topAnchor="330.0" />
    </children>
 </AnchorPane>
