--- a/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
+++ b/src/Client/Views/ListOfVehiclesView/VehicleListView.fxml
@@ -18,6 +18,6 @@
         <Label layoutX="126.0" layoutY="49.0" prefHeight="17.0" prefWidth="131.0" text="List of all vehicles" AnchorPane.leftAnchor="126.0" AnchorPane.topAnchor="49.0" />
         <Button layoutX="472.0" layoutY="346.0" mnemonicParsing="false" onAction="#onMenuButton" text="Back to MENU" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="30.0" />
         <ListView fx:id="listView" layoutX="6.0" layoutY="73.0" prefHeight="275.0" prefWidth="588.0" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0" />
-      <ImageView fx:id="logoLabel" fitHeight="52.2" fitWidth="101.8" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="logoSymbol" fitHeight="52.2" fitWidth="101.8" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
