--- a/src/Client/Views/EditBookingInfoView/EditBookingInfoView.fxml
+++ b/src/Client/Views/EditBookingInfoView/EditBookingInfoView.fxml
@@ -18,7 +18,7 @@
          </font>
       </Label>
       <Label layoutX="25.0" layoutY="61.0" text="Choose an id of a customer:" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="61.0" />
-      <Button layoutX="365.0" layoutY="343.0" mnemonicParsing="false" onAction="#onUpdateBookingButton" text="Update Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
+      <Button onAction="#onUpdateBookingButton" layoutX="365.0" layoutY="343.0" mnemonicParsing="false"  text="Update Booking" AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="140.0" />
       <ComboBox fx:id="customerID" layoutX="25.0" layoutY="84.0" prefWidth="150.0" promptText="Customer's ID" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="84.0" />
       <Label layoutX="299.0" layoutY="52.0" text="Select a vehicle type:" AnchorPane.leftAnchor="299.0" AnchorPane.topAnchor="52.0" />
       <ComboBox fx:id="type" layoutX="427.0" layoutY="47.0" prefHeight="27.0" prefWidth="121.0" promptText="Desire type" AnchorPane.leftAnchor="427.0" AnchorPane.topAnchor="47.0" />
